--- a/tulip-chiphd/init.sun50iw1p1.rc
+++ b/tulip-chiphd/init.sun50iw1p1.rc
@@ -120,6 +120,8 @@ on post-fs-data
     # due to encryption
 
 on boot
+    chmod 0660 /dev/cpuctl
+
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
     chmod 0660 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
 
